--- a/index.html
+++ b/index.html
@@ -1,4 +1,27 @@
 <!doctype HTML>
 <html>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Eligijus Krėpšta</title>
+	<link rel="stylesheet" href="assets/css/style.css">
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300|Exo+2:700' rel='stylesheet' type='text/css'>
+</head>
+<body>
+	<section class="intro">
+		<div class="row">
+			<div class="intro-text">
+				<h1 class="text-alt">Hi, I'm Eligijus</h1>
+				<p>I code websites</p>
+				<p>I know HTML/CSS</p>
+				<p>I am friendly with coworkers</p>
+				<p>I have an oppinion on web design</p>
+			</div>
+			<div class="intro-photo">
+				<img src="http://placekitten.com/g/200/300" alt="My Photo">
+			</div>	
+		</div><!-- /.row -->
+	</section>
+</body>
 </html>
