--- a/index.html
+++ b/index.html
@@ -12,16 +12,38 @@
 	<section class="intro">
 		<div class="row">
 			<div class="intro-text">
-				<h1 class="text-alt">Hi, I'm Eligijus</h1>
-				<p>I code websites</p>
-				<p>I know HTML/CSS</p>
-				<p>I am friendly with coworkers</p>
-				<p>I have an oppinion on web design</p>
+				<div class="mid-box">
+					<h1>Hi, I'm Eligijus</h1>
+					<p>I code websites</p>
+					<p>I know HTML/CSS</p>
+					<p>I am friendly with coworkers</p>
+					<p>I have an oppinion on web design</p>
+				</div>	
 			</div>
 			<div class="intro-photo">
-				<img src="http://placekitten.com/g/200/300" alt="My Photo">
 			</div>	
 		</div><!-- /.row -->
+	</section>
+	<section class="portfolio">
+		<div class="row">
+			<div class="description">
+				<h1>Samanų Sofutė</h1>
+				<br>
+				<h4>My role</h4>
+				<p>Coding HTML/CSS/JS and converting to Wordpress theme</p>
+				<br>
+				<h4>Overwiev</h4>
+				<p>This website is going to be used by my lovely wife.</p>
+				<br>
+				<a href="#" class="btn">Visit</a>
+
+			</div>
+			<div class="screenshot">
+				<div class="box-169">
+					<div class="content" id="first-portfolio-item"></div>
+				</div>
+			</div>
+		</div> <!-- row -->
 	</section>
 </body>
 </html>
