added all the meat

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 			</div>	
 		</div><!-- /.row -->
 	</section>
+<div id="samanu-sofute">	
 	<section class="portfolio">
 		<div class="row">
 			<div class="description">
@@ -39,11 +40,52 @@
 
 			</div>
 			<div class="screenshot">
+				<div class="box-header">
+					<div class="tiny circle1"></div>
+					<div class="tiny circle2"></div>
+					<div class="tiny circle3"></div>
+				</div>
 				<div class="box-169">
 					<div class="content" id="first-portfolio-item"></div>
 				</div>
 			</div>
 		</div> <!-- row -->
 	</section>
+</div>
+<div id="uzuovejos">	
+	<section class="portfolio">
+		<div class="row">
+			<div class="description">
+				<h1>Samanų Sofutė</h1>
+				<br>
+				<h4>My role</h4>
+				<p>Coding HTML/CSS/JS and converting to Wordpress theme</p>
+				<br>
+				<h4>Overwiev</h4>
+				<p>This website is going to be used by my lovely wife.</p>
+				<br>
+				<a href="#" class="btn">Visit</a>
+
+			</div>
+			<div class="screenshot">
+				<div class="box-header">
+					<div class="tiny circle1"></div>
+					<div class="tiny circle2"></div>
+					<div class="tiny circle3"></div>
+				</div>				
+				<div class="box-169">
+					<div class="content" id="second-portfolio-item"></div>
+				</div>
+			</div>
+		</div> <!-- row -->
+	</section>	
+</div>
+<footer>
+	<section>
+		<div class="row">
+			
+		</div>
+	</section>
+</footer>
 </body>
 </html>
