--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<div class="tiny circle3"></div>
 				</div>
 				<div class="box-169">
-					<div class="content" id="first-portfolio-item"></div>
+					<div class="lazy content" data-original="http://placekitten.com/g/900/600" style="background-image:url('assests/img/ek.png')"></div>
 				</div>
 			</div>
 		</div> <!-- row -->
@@ -75,7 +75,7 @@
 					<div class="tiny circle3"></div>
 				</div>				
 				<div class="box-169">
-					<div class="content" id="second-portfolio-item"></div>
+					<div class="lazy content" data-original="http://placekitten.com/g/900/900" style="background-image:url('assests/img/ek.png')"></div>					
 				</div>
 			</div>
 		</div> <!-- row -->
