added skill/word "slider"

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300|Exo+2:700' rel='stylesheet' type='text/css'>
 </head>
 <body>
+	<span id="top"></span>
 	<section class="intro">
 		<div class="row">
 			<div class="intro-text">
@@ -16,7 +17,11 @@
 					<h1>Hi, I'm Eligijus</h1>
 					<br>
 					<p>I code websites</p>
-					<p>I know HTML/CSS</p>
+					<p>I know <span class="skills visible" id="first-skill">HTML/CSS</span>
+						<span class="skills hidden">jQuery</span>
+						<span class="skills hidden">WordPress</span>
+						<span class="skills hidden">Bootstrap</span>
+						<span class="skills hidden">SCSS</span></p>
 					<p>I am friendly with coworkers</p>
 					<p>I have an oppinion on web design</p>
 				</div>	
@@ -47,7 +52,7 @@
 					<div class="tiny circle3"></div>
 				</div>
 				<div class="box-169">
-					<div class="lazy content" data-original="http://placekitten.com/g/900/600" style="background-image:url('assests/img/ek.png')"></div>
+					<div class="lazy content" data-original="http://placekitten.com/g/900/600" style="background-image:url('assets/img/ek.png')"></div>
 				</div>
 			</div>
 		</div> <!-- row -->
@@ -75,7 +80,7 @@
 					<div class="tiny circle3"></div>
 				</div>				
 				<div class="box-169">
-					<div class="lazy content" data-original="http://placekitten.com/g/900/900" style="background-image:url('assests/img/ek.png')"></div>					
+					<div class="lazy content" data-original="http://placekitten.com/g/900/900" style="background-image:url('assets/img/ek.png')"></div>					
 				</div>
 			</div>
 		</div> <!-- row -->
@@ -85,7 +90,8 @@
 	<section>
 		<div class="row">
 			<p class="text-center">Eligijus Krėpšta 2014</p>
-			<p class="text-center"><a href="mailto:k.eligijus@gmail.com">k.eligijus@gmail.com</a></p>
+			<p class="text-center"><a class="btn" href="mailto:keligijus@gmail.com">keligijus@gmail.com</a></p>
+			<p class="text-center"><a data-scroll href="#top">Go back to top</a></p>
 		</div>
 	</section>
 </footer>
