--- a/index.html
+++ b/index.html
@@ -30,6 +30,36 @@
 			</div>	
 		</div><!-- /.row -->
 	</section>
+
+<div id="uzuovejos">	
+	<section class="portfolio">
+		<div class="row">
+			<div class="description">
+				<h1>Užuovėjos</h1>
+				<br>
+				<h4>My role</h4>
+				<p>Coding HTML/CSS/JS and converting to Wordpress theme</p>
+				<br>
+				<h4>Overwiev</h4>
+				<p>This website is going to be used by my lovely wife.</p>
+				<br>
+				<a href="#" class="btn">Visit</a>
+
+			</div>
+			<div class="screenshot">
+				<div class="box-header">
+					<div class="tiny circle1"></div>
+					<div class="tiny circle2"></div>
+					<div class="tiny circle3"></div>
+				</div>				
+				<div class="box-169">
+					<div class="lazy content" data-original="assets/img/uzuovejos-lt.png" style="background-image:url('assets/img/ek.png')"></div>					
+				</div>
+			</div>
+		</div> <!-- row -->
+	</section>	
+</div>
+
 <div id="samanu-sofute">	
 	<section class="portfolio">
 		<div class="row">
@@ -58,6 +88,7 @@
 		</div> <!-- row -->
 	</section>
 </div>
+
 <div id="uzuovejos">	
 	<section class="portfolio">
 		<div class="row">
@@ -79,13 +110,14 @@
 					<div class="tiny circle2"></div>
 					<div class="tiny circle3"></div>
 				</div>				
-				<div class="box-169">
-					<div class="lazy content" data-original="http://placekitten.com/g/900/900" style="background-image:url('assets/img/ek.png')"></div>					
+				<div class="box-117">
+					<div class="lazy content" data-original="assets/img/uzuovejos-11-7.jpg" style="background-image:url('assets/img/ek.png')"></div>					
 				</div>
 			</div>
 		</div> <!-- row -->
 	</section>	
 </div>
+
 <footer>
 	<section>
 		<div class="row">
