almost done. Off to find my own picture

--- a/index.html
+++ b/index.html
@@ -37,71 +37,13 @@
 			<div class="description">
 				<h1>Užuovėjos</h1>
 				<br>
-				<h4>My role</h4>
-				<p>Coding HTML/CSS/JS and converting to Wordpress theme</p>
+				<h4>Work done</h4>
+				<p>Coding HTML/CSS, using Bootstrap and converting to Wordpress theme</p>
 				<br>
-				<h4>Overwiev</h4>
-				<p>This website is going to be used by my lovely wife.</p>
+				<h4>Ideas</h4>
+				<p>This website is used by a camp for linguistic scientists.</p>
 				<br>
-				<a href="#" class="btn">Visit</a>
-
-			</div>
-			<div class="screenshot">
-				<div class="box-header">
-					<div class="tiny circle1"></div>
-					<div class="tiny circle2"></div>
-					<div class="tiny circle3"></div>
-				</div>				
-				<div class="box-169">
-					<div class="lazy content" data-original="assets/img/uzuovejos-lt.png" style="background-image:url('assets/img/ek.png')"></div>					
-				</div>
-			</div>
-		</div> <!-- row -->
-	</section>	
-</div>
-
-<div id="samanu-sofute">	
-	<section class="portfolio">
-		<div class="row">
-			<div class="description">
-				<h1>Samanų Sofutė</h1>
-				<br>
-				<h4>My role</h4>
-				<p>Coding HTML/CSS/JS and converting to Wordpress theme</p>
-				<br>
-				<h4>Overwiev</h4>
-				<p>This website is going to be used by my lovely wife.</p>
-				<br>
-				<a href="#" class="btn">Visit</a>
-
-			</div>
-			<div class="screenshot">
-				<div class="box-header">
-					<div class="tiny circle1"></div>
-					<div class="tiny circle2"></div>
-					<div class="tiny circle3"></div>
-				</div>
-				<div class="box-169">
-					<div class="lazy content" data-original="http://placekitten.com/g/900/600" style="background-image:url('assets/img/ek.png')"></div>
-				</div>
-			</div>
-		</div> <!-- row -->
-	</section>
-</div>
-
-<div id="uzuovejos">	
-	<section class="portfolio">
-		<div class="row">
-			<div class="description">
-				<h1>Užuovėjos</h1>
-				<br>
-				<h4>My role</h4>
-				<p>Coding HTML/CSS/JS and converting to Wordpress theme</p>
-				<br>
-				<h4>Overwiev</h4>
-				<p>This website is going to be used by my lovely wife.</p>
-				<br>
-				<a href="#" class="btn">Visit</a>
+				<a href="http://xn--uuovjos-w8a73g.lt/" target="_blank" class="btn">Visit</a>
 
 			</div>
 			<div class="screenshot">
@@ -116,6 +58,64 @@
 			</div>
 		</div> <!-- row -->
 	</section>	
+</div>
+
+<div id="samanu-sofute">	
+	<section class="portfolio">
+		<div class="row">
+			<div class="description">
+				<h1>Samanų Sofutė</h1>
+				<br>
+				<h4>Work done</h4>
+				<p>Coding HTML/CSS/JS and converting to Wordpress theme. Using Bootstrap SCSS mixins some elements.</p>
+				<br>
+				<h4>Ideas</h4>
+				<p>This website is going to be used by my lovely wife.Currently under construction.</p>
+				<br>
+				<a href="#" class="btn">Visit</a>
+
+			</div>
+			<div class="screenshot">
+				<div class="box-header">
+					<div class="tiny circle1"></div>
+					<div class="tiny circle2"></div>
+					<div class="tiny circle3"></div>
+				</div>
+				<div class="box-169">
+					<div class="lazy content" data-original="assets/img/samanu-sofute-11-7.jpg" style="background-image:url('assets/img/ek.png')"></div>
+				</div>
+			</div>
+		</div> <!-- row -->
+	</section>
+</div>
+
+<div id="afs">	
+	<section class="portfolio">
+		<div class="row">
+			<div class="description">
+				<h1>AFS</h1>
+				<br>
+				<h4>Work done</h4>
+				<p>Coding HTML/CSS/JS.<br>Using Zurb Foundation.</p>
+				<br>
+				<h4>Ideas</h4>
+				<p>At first I liked the idea of a full screen accordion. Now I do not think it's such a great idea.</p>
+				<br>
+				<a href="http://afsistemos.lt/" target="_blank" class="btn">Visit</a>
+
+			</div>
+			<div class="screenshot">
+				<div class="box-header">
+					<div class="tiny circle1"></div>
+					<div class="tiny circle2"></div>
+					<div class="tiny circle3"></div>
+				</div>
+				<div class="box-169">
+					<div class="lazy content" data-original="assets/img/AFS-16-9.jpg" style="background-image:url('assets/img/ek.png')"></div>
+				</div>
+			</div>
+		</div> <!-- row -->
+	</section>
 </div>
 
 <footer>
