fixed samanu sofutes link

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				<h4>Ideas</h4>
 				<p>This website is going to be used by my lovely wife.Currently under construction.</p>
 				<br>
-				<a href="#" class="btn">Visit</a>
+				<a href="http://www.samanusofute.lt/" target="_blank" class="btn">Visit</a>
 
 			</div>
 			<div class="screenshot">
