--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<p>I have an oppinion on web design</p>
 				</div>	
 			</div>
-			<div class="intro-photo">
+			<div class="intro-photo lazy" data-original="assets/img/eligijus.jpg" style="background-image:url('assets/img/ek.png')">
 			</div>	
 		</div><!-- /.row -->
 	</section>
