Corrected the typo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<span class="skills hidden">Bootstrap</span>
 						<span class="skills hidden">SCSS</span></p>
 					<p>I am friendly with coworkers</p>
-					<p>I have an oppinion on web design</p>
+					<p>I have an opinion on web design</p>
 				</div>	
 			</div>
 			<div class="intro-photo lazy" data-original="assets/img/eligijus.jpg" style="background-image:url('assets/img/ek.png')">
