--- a/pomidoras/index.html
+++ b/pomidoras/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Pamidorinis laikrodis</title>
   <link rel="stylesheet" href="style.css">
+  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
   <link href='http://fonts.googleapis.com/css?family=Asap|Droid+Sans+Mono&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <!-- <link href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'> -->
   <!-- <link href='http://fonts.googleapis.com/css?family=VT323' rel='stylesheet' type='text/css'> -->
