new version of tomatoe

--- a/pomidoras/index.html
+++ b/pomidoras/index.html
@@ -3,9 +3,8 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Pamidorinis laikrodis</title>
+  <title>Tomatoe Timer | Beta</title>
   <link rel="stylesheet" href="style.css">
-  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
   <link href='http://fonts.googleapis.com/css?family=Asap|Droid+Sans+Mono&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <!-- <link href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'> -->
   <!-- <link href='http://fonts.googleapis.com/css?family=VT323' rel='stylesheet' type='text/css'> -->
@@ -73,6 +72,7 @@
   <script src="tomatoe.js"></script>
   <!--
   <script src="timer.js"></script>
+  -->
   <script src="vars.js"></script>
   <script src="modes.js"></script>
   <script src="events.js"></script>
@@ -80,6 +80,5 @@
   <script src="settings.js"></script>
   <script src="notifications.js"></script>
   <script src="localstorage.js"></script>
-  -->
 </body>
 </html>
